--- a/style.css
+++ b/style.css
@@ -1,2 +1,45 @@
 
 
+.noto-serif{
+  font-family: "Noto Serif", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+.inter{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+/* shared style */
+body p{
+    color: rgba(0, 0, 0, 0.5);
+}
+
+/* nav style */
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 150px 120px;
+}
+nav ul{
+    display: flex;
+}
+nav li{
+    list-style: none;
+    margin-right: 48px;
+
+}
+nav a{
+    text-decoration: none;
+    color: #252432;
+    font-weight: 700;
+    
+}
+.different{
+    color: #8987A1;
+    font-weight: 400;
+}
