--- a/style.css
+++ b/style.css
@@ -119,4 +119,42 @@ nav a{
 .trusted-seller img{
     width: 286px;
 }
+/* latest-deals */
+.latest-deals{
+    display: none;
+}
+
+/* join style */
+.join{
+    background-image: url(images/news-letter-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    height: 533px;
+}
+.join-item h2{
+    font-size: 50px;
+    color: #FFFFFF;
+
+}
+.join-item input{
+    padding: 15px 20px;
+    font-size: 16px;
+    width: 644px;
+    border: none;
+    
+}
+.join-item button{
+    padding: 16px 53px;
+    font-size: 16px;
+    color: #FFFFFF;
+    border: none;
+    background-color: #E95A08;
+   
+}
+
 
